# Functions-Calculator

./: CMakeLists.txt  README.md  README.txt
include/: Add.h  CMakeLists.txt  Composite.h  Function.h  Ln.h  Log.h  Macros.h  Menu.h  Multiply.h  Poly.h  Sin.h  Utilities.h
src/: Add.cpp  CMakeLists.txt  Composite.cpp  Function.cpp  Ln.cpp  Log.cpp  Menu.cpp  Multiply.cpp  Poly.cpp  Sin.cpp  Utilities.cpp  ex1_sharon_levi_bar_ifrah.cpp
